@startuml

class EnergySelectionWindow {
  - energyTypeComboBox: JComboBox<String>
  - calculateButton: JButton
  - outputTextArea: JTextArea
  - powerInputField: JTextField
  - perMinuteRadioButton: JRadioButton
  - perHourRadioButton: JRadioButton
  - perDayRadioButton: JRadioButton
  - perMonthRadioButton: JRadioButton
  - perYearRadioButton: JRadioButton
  - timeButtonGroup: ButtonGroup
  + EnergySelectionWindow()
  - initializeComponents()
  - getTimeSelection(): String
  - handleEnergyCalculation(String, double, String): String
  - calculateFlowBasedOnTime(double, String): double
  - calculateTemperatureBasedOnTime(double, String): double
  - calculatePanelSizeBasedOnTime(double, String): double
  - calculateTimeInHours(double, String): int
  - getDoubleInput(String): double
  - updateAverageEnergy(String, double)
  + showWindow()
}

class WaterEnergy {
  - wheelSize: double
  + WaterEnergy(double)
  + calculateEnergy(double): double
}

class AirEnergy {
  - windSpeed: double
  + AirEnergy(double)
  + calculateEnergy(double): double
}

class SolarEnergy {
  - timeOfDayLight: double
  + SolarEnergy(double)
  + calculateEnergy(double): double
}

class HeatEnergy {
  - heatTemperature: double
  - timeInHours: int
  + HeatEnergy(double, int)
  + calculateEnergy(double): double
}

EnergySelectionWindow --> WaterEnergy: creates
EnergySelectionWindow --> AirEnergy: creates
EnergySelectionWindow --> SolarEnergy: creates
EnergySelectionWindow --> HeatEnergy: creates

@enduml
